jamine test update1

--- a/test.html
+++ b/test.html
@@ -19,7 +19,7 @@
   <!-- <script src="spec/SpecHelper.js"></script> -->
   <!-- <script src="spec/PlayerSpec.js"></script> -->
   <script src="note.js"></script>
-  <script src="test.js"></script>
+  <script src="test.spec.js"></script>
 
 </head>
 
